--- a/joke.css
+++ b/joke.css
@@ -1,18 +1,23 @@
 .header {
   border: 1px solid red;
-  padding: 15px;
+  padding: 3%;
 }
 
-.menu {
-  width: 25%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-}
-
-.main {
+.question {
   width: 75%;
   float: left;
-  padding: 15px;
+  padding: 5%;
   border: 1px solid red;
+}
+
+.reponse {
+  width: 75%;
+  float: left;
+  padding: 5%;
+  border: 1px solid red;
+}
+
+.footer {
+  border: 1px solid red;
+  padding: 20%;
 }
